# hy

./: flake.nix  pyproject.toml  requirements-dev.txt
.github/workflows/: static-analysis.yml  tests.yml
docs/: conf.py
hy/: _compat.py  cmdline.py  completer.py
tests/: test_bin.py  test_completer.py
